--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     </string>
     <string name="hint_title">Kompliziert</string>
     <string name="hint_message">Lorem ipsum dolor sit amet, ad omnis assentior mediocritatem sed.</string>
+    <string name="toggle_star">Toggle star</string>
 </resources>
